# CC-232

./: .gitignore
PC2/: CMakeLists.txt  README.md
PC2/benchmark/: bench_segments.cpp
PC2/demos/: demo_segments.cpp
PC2/include/: segments_removal.h
PC2/resultados/: resultados.md
PC2/src/: segments_removal.cpp
PC2/tests/: test_segments.cpp
Semana0/: Observaciones.txt
Semana1/: actividad1_semana1.md
Semana2/: Actividad2.md
